v_utils_macros/tests/compile_fail/vec_fields_non_vec.stderr
error: proc-macro derive panicked
 --> $DIR/v_utils_macros/tests/compile_fail/vec_fields_non_vec.rs:4:17
  |
4 | #[derive(Debug, VecFieldsFromVecStr)]
  |                 ^^^^^^^^^^^^^^^^^^^
  |
  = help: message: All fields must be of type Vec<T>

error: aborting due to 1 previous error

